--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <title>Encriptado</title>
-    <link rel="stylesheet" href="hu.css">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/encriptado.css">
     <link rel="stylesheet" href="assets/css/barra.css">
+    <link rel="stylesheet" href="assets/font/Nasa.ttf">
 </head>
 
 <body>
@@ -34,11 +34,11 @@
     </div>
 
     <div class="testbox">
-        <h1 id= "texto">Encripta tu mensaje</h1>
+        <h1 id= "texto">Encripta tu Micaela 2</h1>
         
         <div class= "Parrafo"> <span></span></div>
 
-            <a href="en.html" class= "btn neon">
+            <a href="segundavista.html" class= "btn neon">
                 <span></span>
                 <span></span>
                 <span></span>
