--- a/segundavista.html
+++ b/segundavista.html
@@ -34,9 +34,9 @@
     <div class="testbox">
 
         <h1 id= "texto">Escribe aquí</h1>
-        <input typ= "text" size="25"/> 
-        <button type="submit" onclick="encriptar(this)">Encriptar</button>
-        <button type="submit" onclick="desencriptar(this)">Desencriptar</button>
+        <input type= "text" size="25"/> 
+        <button class= "btn neon" type="submit" onclick="encriptar(this)">Encriptar</button>
+        <button class= "btn neon" type="submit" onclick="desencriptar(this)">Desencriptar</button>
 
         <p id="resultado"></p>
 
