--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/encriptado.css">
     <link rel="stylesheet" href="assets/css/barra.css">
-    <link rel="stylesheet" href="assets/font/Nasa.ttf">
+
 </head>
 
 <body>
@@ -27,9 +27,9 @@
 
     <div id="cabecera">
         <video id="video" loop autoplay preload muted>
-            <source src="video-fondo.mp4" >
-            <source src="video-fondo.mp4" >
-            <source src="video-fondo.mp4" >            
+            <source src="assets/video/video-fondo.mp4">
+            <source src="assets/video/video-fondo.mp4" >
+            <source src="assets/video/video-fondo.mp4" >            
         </video>
     </div>
 
