--- a/segundavista.html
+++ b/segundavista.html
@@ -25,9 +25,9 @@
 
     <div id="cabecera">
         <video id="video" loop autoplay preload muted>
-            <source src="video-fondo.mp4" >
-            <source src="video-fondo.mp4" >
-            <source src="video-fondo.mp4" >            
+            <source src="assets/video/video-fondo.mp4" >
+            <source src="assets/video/video-fondo.mp4">
+            <source src="assets/video/video-fondo.mp4">            
         </video>
     </div>
 
