--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
 
         <ul>
-            <li><a href="#">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="#">Creadores</a></li>
             <li><a href="#">Encriptado Base 64<i class="icon ion-md-arrow-dropdown"></i></a>
                 <ul>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="testbox">
-        <h1 id= "texto">Encripta tu Micaela 2</h1>
+        <h1 id= "texto">Encripta tu código</h1>
         
         <div class= "Parrafo"> <span></span></div>
 
