--- a/creadores.html
+++ b/creadores.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
+    <meta charset="utf-8">
     <title>Encriptado</title>
-    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/encriptado.css">
     <link rel="stylesheet" href="assets/css/barra.css">
+    <link rel="stylesheet" href="assets/css/botones-encrip.css">
 
-</head>
+  </head>
+  <body>
 
-<body>
     <nav>
 
         <ul>
@@ -24,7 +24,6 @@
         </ul>
     </nav>
 
-
     <div id="cabecera">
         <video id="video" loop autoplay preload muted>
             <source src="assets/video/video-fondo.mp4">
@@ -34,19 +33,22 @@
     </div>
 
     <div class="testbox">
-        <h1 id= "texto">Encripta tu código</h1>
-        
-        <div class= "Parrafo"> <span></span></div>
 
-            <a href="segundavista.html" class= "btn neon">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                Comenzar
-            </a>
-
+        <h1 id= "texto">Creadores de la página</h1>
+            <br></br>
+                <div class= "Parrafo"> 
+                    <p>
+                        <li> Verónica Carranza</li>
+                        <li> Micaela Cusipuma</li>
+                        <li> Arellys Zuta</li>
+                    </p>
+                </div>
+            </br>
     </div>
+
+
+
+  <script src="assets/js/encriptado.js"></script>
 
 
 </body>
