--- a/segundavista.html
+++ b/segundavista.html
@@ -13,11 +13,11 @@
       <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Creadores</a></li>
-            <li><a href="#">Encriptado Base 64<i class="icon ion-md-arrow-dropdown"></i></a>
+            <li><a href="creadores.html">Creadores</a></li>
+            <li><a href="base64.html">Encriptado Base 64<i class="icon ion-md-arrow-dropdown"></i></a>
                 <ul>
-                    <li><a href="#">¿Cómo se usa?</a></li>
-                    <li><a href="#">Origen</a></li>
+                    <li><a href="base64.html">¿Cómo se usa?</a></li>
+                    <li><a href="base64.html#origen">Origen</a></li>
                 </ul>
             </li>
         </ul>
