--- a/base64.html
+++ b/base64.html
@@ -44,7 +44,7 @@
 
         <h1 id= "texto">¿Cómo se usa?</h1>
             <br>
-                <div class= "Parrafo"> 
+                <div class= "parrafo"> 
                     <p>
                         El método de codificación Base64 requiere que cada
                         tres bytes de 8 bits se conviertan en cuatro bytes
@@ -60,7 +60,7 @@
     <div id= "origen" class= "box">
         <h1>Origen</h1>
         <br>
-          <div class= "Parrafo"> 
+          <div class= "parrafo"> 
             <p> 
                 La intención original de Base64 era cumplir con el requisito de que los caracteres
                 no ASCII no se pueden usar directamente en los correos electrónicos porque algunos
