--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <div class="testbox">
-        <h1 id= "texto">Encripta tu código</h1>
+        <h1 id= "texto">Encripta tu mensaje</h1>
         
         <div class= "Parrafo"> <span></span></div>
 
